# server/docs/swagger.json
@@ -25,7 +25,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/model.Establishment"
+                                "$ref": "#/definitions/model.EstablishmentWithStoresTotal"
                             }
                         }
                     },
@@ -521,6 +521,41 @@
                     "items": {
                         "$ref": "#/definitions/model.Store"
                     }
+                },
+                "zip_code": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.EstablishmentWithStoresTotal": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "address_number": {
+                    "type": "string"
+                },
+                "city": {
+                    "type": "string"
+                },
+                "corporate_name": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "number": {
+                    "type": "string"
+                },
+                "state": {
+                    "type": "string"
+                },
+                "storesTotal": {
+                    "type": "integer"
                 },
                 "zip_code": {
                     "type": "string"
